# problem-finder

./: .gitignore  .vercelignore  README.md  app.py  auth.py  crew.py  main.py  pyproject.toml  requirements.txt  vercel.json
assets/: chat.json  document.json
config/: tasks.yaml
src/problemfinder/: crew.py  main.py  requirements.txt
src/problemfinder/config/: agents.yaml  tasks.yaml
src/problemfinder/tools/: customized_vision_tool.py
