[project]
name = "problemfinder"
version = "0.1.0"
description = "problemFinder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
problemfinder = "problemfinder.main:run"
run_crew = "problemfinder.main:run"
train = "problemfinder.main:train"
replay = "problemfinder.main:replay"
test = "problemfinder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
